1)Fix issue with border below posted tweet text by placing the p element inside a section element. Then assigning a class of 'article-body'. Styling added to this class. Made width 100% so that the border itself spans wider. Set text alignment to left. Set bottom margin to 10px and padding to 10px. 2) Set styling for nested p tag within article-body by setting margin top to 15 px and margin bottom to 15 px. By default p tags have margins on top and bottom as per mentor. 3)Set padding of inner-header class to 10px 4)Set padding of article-footer class to 10px. This pushes in the three main children of the tweet container in.

--- a/public/styles/posted-tweet.css
+++ b/public/styles/posted-tweet.css
@@ -9,6 +9,7 @@
 .inner-header {
   display: flex;
   width: 100%;
+  padding: 10px;
 }
 
 .inner-header > span {
@@ -21,8 +22,17 @@
   width: 100%;
 }
 
-p {
+.article-body {
   border-bottom: 5px solid;
+  width: 100%;
+  text-align: left;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.article-body p {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .article-footer {
@@ -30,4 +40,5 @@ p {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  padding: 10px;
 }
